# scheduler

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  README.md.new  app.py  cli.py  docker-compose.dev.yml  docker-compose.yml  gh.py  gh_api.py  init_db.py  justfile  mongo.py  pyproject.toml  recache.py  requirements.txt  test_blackouts.py  test_sprint1.py  test_sprint1_e2e.py  test_worker_debug.py
.devcontainer/: devcontainer.json  post-create.sh
docs/: simplified.md  spec.md  specification.md
prompts/: specification.md
static/: app.js  style.css
templates/: base.html  hello.html  index.html  instructions.html  password_access.html  schedule.html  set_name.html  team.html  user.html
test/: __init__.py  cache_test.sh  debug_recache.py  simple_recache_test.py  test_recache.py  test_sprint1_2.py
test/data/: s_KXUfu1KMwj6i.json  s_TfHNWNR0v7M4.json  s_m0pzA4Y68Puk.json  s_mHJtNj0XupOm.json  s_o9pHDZ2Bm7AE.json
test/data/FK4ZLCeq8LXv/: kjhgsdfu.json
test/data/d2h8PQIlWddR/: schedule.json
test/data/u5G5AjLR6nie/: kjhhg6G4R.json
test/data/zEnSAbJgxQWM/: d2E2Tq7.json
