[project]
name = "scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "flask-dance>=7.1.0",
    "flask-dotenv>=0.1.2",
    "flask-login>=0.6.3",
    "flask-session>=0.8.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pygithub>=2.6.1",
    "pymongo>=4.13.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
